# NrfUsbDongle

./: NrfDongle.code-workspace  README.md  nice_nano_bootloader.hex  rf_protocol.md  uf2_boot.md
app/src/ap/modules/qmk/: CMakeLists.txt
app/src/ap/modules/qmk/port/: matrix.c  port.h
app/src/bsp/: bsp.h
app/src/common/: def.h
app/src/common/hw/include/: battery.h
app/src/common/hw/include/sensor/: pmw3610.h
app/src/hw/driver/: battery.c  keys.c  pmw3610.c
app/src/hw/driver/ble/: ble.c  ble_hid.c  ble_hid.h
app/src/hw/driver/ble/driver/: esp_hid_gap.c
app/src/hw/driver/usb/: cdc.c  usb.c
app/src/hw/driver/usb/usb_hid/: usbd_hid.h
app/src/hw/driver/wear_leveling/: wear_leveling_internal.h
app_dongle/: CMakeLists.txt  app.overlay  prj.conf
app_dongle/src/: NrfUsbDongle.code-workspace  main.c
app_dongle/src/ap/: ap.c  ap.cpp  ap_lvgl.c  ap_lvgl.h  ap_status_bar.c  ap_status_bar.h
app_dongle/src/ap/modules/qmk/: CMakeLists.txt  qmk.c
app_dongle/src/ap/modules/qmk/keyboards/baram/45k/: config.cmake  config.h  keymap.c
app_dongle/src/ap/modules/qmk/keyboards/baram/45k/json/: BARAM-45K-ESP32-VIA.JSON  HKH_6KEY_TEST.JSON  HKH_DongleKeyboard.JSON
app_dongle/src/ap/modules/qmk/port/: matrix.c  my_key_protocol.c  my_key_protocol.c.bak  my_key_protocol.h  my_key_protocol.h.bak  pointing_device_drivers.c
app_dongle/src/ap/modules/qmk/port/protocol/: host.c
app_dongle/src/bsp/: bsp.c  bsp.h
app_dongle/src/common/hw/include/: keys.h  myrf.h  spi.h
app_dongle/src/common/hw/include/lcd/: st7789.h
app_dongle/src/hw/: hw.c  hw.h  hw_def.h
app_dongle/src/hw/driver/: adc.c  eeprom.c  gpio.c  keys.c  log.c  myrf.c  pmw3610.c  reset.c  spi.c  uart.c
app_dongle/src/hw/driver/lcd/: st7735.c  st7789.c
app_dongle/src/hw/driver/lvgl/: icon_mouse_cursor.c  lv_port_disp.c  lv_port_indev.c
app_dongle/src/hw/driver/usb/: cdc.c  usb.c  usb.h
app_dongle/src/hw/driver/usb/usb_hid/: usbd_hid.c  usbd_hid.h
app_dongle/src/hw/driver/wear_leveling/: wear_leveling_config.h  wear_leveling_port.c
app_dongle/src/lib/: lv_conf.h
app_keyboard/: CMakeLists.txt  app.overlay  prj.conf
app_keyboard/src/: NrfUsbDongle.code-workspace
app_keyboard/src/ap/: ap.c  ap_def.h  config.h  matrix.c  matrix.h  my_key_protocol.c  my_key_protocol.h
app_keyboard/src/ap/modules/qmk/: CMakeLists.txt  qmk.c
app_keyboard/src/ap/modules/qmk/keyboards/baram/45k/: config.h  keymap.c
app_keyboard/src/ap/modules/qmk/keyboards/baram/45k/json/: baram-45k-esp32.json
app_keyboard/src/ap/modules/qmk/port/: my_key_protocol.c  my_key_protocol.h  pointing_device_drivers.c  port.h
app_keyboard/src/ap/modules/qmk/port/protocol/: host.c
app_keyboard/src/common/hw/include/: spi.h
app_keyboard/src/hw/: hw.c  hw.h  hw_def.h
app_keyboard/src/hw/driver/: eeprom.c  gpio.c  i2c.c  keys.c  myrf.c  pmw3610.c  reset.c  spi.c
app_keyboard/src/hw/driver/ble/: ble.h
app_keyboard/src/hw/driver/ble/driver/: esp_hid_gap.h
app_keyboard/src/hw/driver/usb/: usb.c
app_keyboard/src/hw/driver/usb/usb_hid/: usbd_hid.c
boards/arm/nicenano/: Kconfig.board  board.cmake  nicenano-pinctrl.dtsi  nicenano.dts  nicenano_defconfig
boards/arm/nicenanov2/: Kconfig.defconfig  Kconfig.nicenanov2  board.yml  nicenanov2.dts  nicenanov2.yml  nicenanov2_defconfig
boards/nicenano/: Kconfig.defconfig  nicenano.dts
doc/: FirmwareDownload.md
tool/: connectTest.py
